Fixed SUR-3850 - Image Thumbnail Layout & Truncate Long Titles in Product Cards

--- a/packages/blocks-next/src/blocks/sticky-purchase/style.scss
+++ b/packages/blocks-next/src/blocks/sticky-purchase/style.scss
@@ -55,6 +55,13 @@
 		min-width: 80px;
 	}
 
+	.wp-block-surecart-product-selected-variant-image {
+		margin-bottom: 0;
+		flex-shrink: 0;
+		width: 80px; // default image width.
+		height: 80px; // default image height.
+	}
+
 	@media (max-width: 400px) {
 		.wp-block-surecart-product-selected-variant-image {
 			display: none;
@@ -67,6 +74,12 @@
 
 	.wp-block-surecart-product-title {
 		color: var(--sc-sticky-purchase-text-color);
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		line-clamp: 2;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	// Compatibility for some theme builders.
@@ -77,9 +90,6 @@
 			> .wp-block-surecart-product-selected-variant-image
 		) {
 		gap: var(--sc-spacing-large);
-	}
-	.wp-block-surecart-product-selected-variant-image {
-		margin-bottom: 0;
 	}
 }
 
